--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">ZFChat</string>
-
+    <string name="app_info">Developed by Zheng Fei, USTC \n QQ: 512864540</string>
     <string name="connect">Connect</string>
     <string name="connected">Connected</string>
     <string name="unconnected">Unconnected</string>
@@ -8,13 +8,16 @@
     <string name="password">Password</string>
     <string name="sign_in">Sign in</string>
     <string name="sign_up">Sign up</string>
-
+    <string name="send">Send</string>
     <string name="title_activity_main">MainActivity</string>
 
     <string name="title_chats">Chat</string>
-    <string name="title_contactors">Contactors</string>
+    <string name="title_contacters">Contacters</string>
     <string name="title_find">Find</string>
-
+    <string name="contacter_management">Contacter Management</string>
+    <string name="name">Name</string>
+    <string name="add_contactor">Add</string>
+    <string name="delete_contactor">Delete</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
